@@ -48,7 +48,6 @@
 
 19. Use FreeType for getting font/glyph information. This need quick drawing of quadratic and cubic Bezier curves (see example5.cpp).
 20. Add quadratic and cubic Bezier curves as primitives (update export to SVG/EPS + simplify some functions) ?!?
-21. Add Armadillo interface for mglData*
 
 * Add 'connect' for connecting points to set of surfaces
 
@@ -103,6 +102,7 @@ D. Docs about JS interface
 3. Docs about mgllab (overview, dialogs, ...)
 4. Example of Evaluate + ".mx" ???
 
+7. Docs about 'dcont'
 8. Docs about 'connect'
 9. user-defined functions fn1()...fn9() at formula evaluation, like "fn1(3)\x^_1" will produce "x^3".
 10. Docs about 'lines'
