@@ -2,7 +2,9 @@
 
 * Add user-defined functions fn1()...fn9() at formula evaluation, like "fn1(3)\x^_1" will produce "x^3".
 * Add 'lines' to draw a set of lines with arrows between points.
+* Add 'dcont' to draw a set of curves, which are intersection of two isosurfaces at given level.
 * Add 'first', 'last' to get array of first/last indexes of values larger specified one along given direction.
+* Add Armadillo interface for mglData*
 
 2.4.4 Released 8 July 2019
 
